2005-07-28 09:00 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.8 Release. ** internal release ** Tagging to test new
	direction for linear elements..

2005-07-27 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) refactored to be more like
	gridSplitEdgeRatio and allow edge splits.

2005-07-27 10:23 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) produce stdout msg that
	can not split inbetween faces
	* src/gridinsert.c (gridAdaptLongShort,gridSplitEdgeRepeat,
	gridSplitEdgeForce) propigated debug_split

2005-07-27 08:32 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShort) if gridSplitEdgeRatio is
	unsucessful call gridSplitEdgeRepeat to debug insertion
	difficulties.
	* src/gridinsert.c (gridSplitEdgeRepeat) created to get edges
	split by trying more complex algorithms and to understand the
	difficulties. (this version stripped out some hacks I had earlier.)

2005-07-26 15:05 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMinInsertCost,gridSetMinInsertCost) added to
	allow the min insert (split,collapse) cost to be adjusted on the
	fly to replace gridADAPT_COST_FLOOR.
	* src/gridinsert.c (gridCollapseEdge,gridSplitEdgeForce,
	gridSplitEdgeRatio) use gridMinInsertCost to accept action.
	* src/gridmetric.c (gridADAPT_COST_FLOOR) removed #define
	
2005-07-26 14:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) started a little routine
	to help put in surface edge splits at any cost.

2005-07-26 13:12 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridWriteTecplotCellJacDet) added to dump out
	specified cell with corner values set to jacobians.

2005-07-26 12:26 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotCellGeom) added an optional double
	array argument to set face value. Set to NULL to ignor. propagated
	through calls.

2005-07-26 11:09 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShort) only die when unable to