@@ -21,8 +21,10 @@ Grid *gridRemoveAllNodes(Grid *g );
 
 Grid *gridAdapt(Grid *g, double minLength, double maxLength );
 Grid *gridAdaptBasedOnConnRankings(Grid *g );
-Grid *gridAdaptLongShort(Grid *g, double minLength, double maxLength,
-			 GridBool debug_split );
+Grid *gridAdaptLongShortCurved(Grid *g, double minLength, double maxLength,
+			       GridBool debug_split );
+Grid *gridAdaptLongShortLinear(Grid *g, double minLength, double maxLength,
+			       GridBool debug_split );
 
 int gridSplitEdge(Grid *g, int n0, int n1 );
 int gridSplitEdgeRatio(Grid *g, Queue *q, int n0, int n1, double ratio);
